# docs/api-openapi.yaml
@@ -151,143 +151,3 @@ paths:
           description: Successful response.
           content:
             application/json: {}
-
-  /api/profile/relationship:
-    post:
-      tags:
-        - default
-      summary: Creates a new relationship between two profiles.
-      parameters:
-        - name: profileId1
-          in: query
-          schema:
-            type: integer
-          description: First profile ID.
-          example: 1
-        - name: profileId2
-          in: query
-          schema:
-            type: integer
-          description: Second profile ID.
-          example: 9
-      responses:
-        "200":
-          description: Successful response.
-          content:
-            application/json: {}
-
-    delete:
-      tags:
-        - default
-      summary: Deletes a relationship between two profiles.
-      parameters:
-        - name: profileId1
-          in: query
-          schema:
-            type: integer
-          required: true
-          description: First profile ID.
-          example: 1
-        - name: profileId2
-          in: query
-          schema:
-            type: integer
-          required: true
-          description: Second profile ID.
-          example: 9
-      responses:
-        "200":
-          description: Successful response.
-          content:
-            application/json: {}
-
-  /api/profile/post:
-    post:
-      tags:
-        - default
-      summary: Creates a new post.
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                content:
-                  type: string
-                  description: The text content of the post.
-      parameters:
-        - name: profileId
-          in: query
-          schema:
-            type: integer
-          description: Profile ID of the author.
-          example: 15
-      responses:
-        "200":
-          description: Successful response.
-          content:
-            application/json: {}
-
-    delete:
-      tags:
-        - default
-      summary: Deletes a post.
-      parameters:
-        - name: postId
-          in: query
-          schema:
-            type: integer
-          required: true
-          description: Post ID to be deleted.
-          example: 18
-      responses:
-        "200":
-          description: Successful response.
-          content:
-            application/json: {}
-
-  /api/advertisement:
-    post:
-      tags:
-        - default
-      summary: Creates a new advertisement.
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                image:
-                  type: string
-                  format: binary
-                  description: Advertisement image.
-      parameters:
-        - name: text
-          in: query
-          schema:
-            type: string
-          description: Text content of the advertisement.
-          example: "This is the advertisement text."
-      responses:
-        "200":
-          description: Successful response.
-          content:
-            application/json: {}
-
-    delete:
-      tags:
-        - default
-      summary: Deletes an advertisement.
-      parameters:
-        - name: adId
-          in: query
-          schema:
-            type: integer
-          required: true
-          description: Advertisement ID to be deleted.
-          example: 4
-      responses:
-        "200":
-          description: Successful response.
-          content:
-            application/json: {}
